operator/pkg/gateway-api/testdata/gateway/tlsroute-mixed-protocol-listeners/output/gateway-tlsroute-mixed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-mixed
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: tls-checks-certificate
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: Same
      name: tls
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
status:
  conditions:
    - lastTransitionTime: "2025-07-01T14:29:32Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: http
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message:
            'Listener conflicts with listener "tls": same port 443 has overlapping
            HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message:
            'Listener not valid. Listener conflicts with listener "tls": same port
            443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: https
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message:
            'Listener conflicts with listener "https": same port 443 has overlapping
            HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message:
            'Listener not valid. Listener conflicts with listener "https": same
            port 443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: tls
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
