operator/pkg/gateway-api/testdata/gateway/tlsroute-mixed-protocol-listeners/output/tlsroute-tlsroute-mixed.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-mixed
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - tls.example.com
  parentRefs:
    - name: gateway-tlsroute-mixed
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-tlsroute-mixed
